# OpenGLProject

./: .gitmodules  CMakeLists.txt  README.md  Shader.cpp  Shader.h  main.cpp
classes/: Camera.h  CubeModel.cpp  CubeModel.h  LightModel.cpp  LightModel.h  Model.cpp  Model.h  Shader.cpp  Shader.h  SquareModel.cpp  SquareModel.h
shaders/: 2dImage.frag  2dImage.vert  fragmentShader.frag  light.frag  light.vert  shaderSingleColour.frag  vertexShader.vert
src/: data.cpp  frame.cpp  include.cpp  main.cpp
src/core/: Assignment.cpp  Instance.cpp  PhysicsComponent.cpp  Scene.cpp  Shader.cpp  core.hpp  stencil.cpp  texture.cpp
src/core/headers/: Assignment.h  CubeMesh.h  Group.h  Instance.h  PhysicsComponent.h  Scene.h  Shader.h  Transformation.h
src/examples/: examples.cpp  examples.hpp
src/lightning-borders/: lightning-borders.hpp
src/shaders/fragment/: model_shadow.frag
